--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .App {
-  text-align: center;
+   display: flex;
+   flex-direction: column;
+   flex-grow: 2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    background-color: rgba(11, 73, 119, 0.925);
+    border: none;
+    padding: 1em;
+    color: aliceblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+
+.weather-details {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: 2px solid black;
+    background-color: rgb(49, 71, 91);
+    overflow: hidden;
+    color: aliceblue;
+    padding: 2em;
+    border-radius: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: auto;
+    min-width: 50rem;
+    max-width: 100rem;
+    height: 50rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.weather-bar {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: large;
+    border: 4px solid gray;
 }
 
-.App-link {
-  color: #61dafb;
+.temp {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.humid {
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
