--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,49 @@
+
+
 body {
     margin: 0;
     padding: 0;
+
 }
 
 .App {
    display: flex;
    flex-direction: column;
-   flex-grow: 2;
+   margin: auto;
+   text-align: center;
+   background: url("https://img.freepik.com/free-vector/gradient-mountain-landscape_23-2149162009.jpg") no-repeat center center fixed;
+   background-size: cover;
+   height: 100vh;
+   width: 100vw;
 }
 
 .header {
-    background-color: rgba(11, 73, 119, 0.925);
+    display: flex;
+    min-height: auto;
+    min-width: auto;
     border: none;
-    padding: 1em;
     color: aliceblue;
+}
+
+.deg {
+    font-size: medium;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.weather-icon  {
+    width: 25%;
+    height: 70%;
+    margin: auto;
+}
+.conditions {
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.feels {
+    color: yellow;
+ 
 }
 
 
@@ -22,25 +52,38 @@ body {
 .weather-details {
     display: flex;
     flex-direction: column;
+    margin: auto;
     text-align: center;
-    border: 2px solid black;
-    background-color: rgb(49, 71, 91);
-    overflow: hidden;
-    color: aliceblue;
+    background-color: rgba(255, 255, 255, 0.514);
+    color: black;
     padding: 2em;
     border-radius: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: auto;
-    min-width: 50rem;
-    max-width: 100rem;
-    height: 50rem;
+    min-width: 50vw;
+    max-width: 100vw;
+    min-height: 70vh;
+    max-height: 40vh;
+   
 }
 
 .weather-bar {
     display: flex;
     justify-content: space-evenly;
-    font-size: large;
-    border: 4px solid gray;
+    padding: 2%;
+    background-color: rgba(43, 41, 39, 0.459);
+    border-radius: 1rem;
+    line-height: 4vh;
+
+}
+
+.icon {
+    height: 50%;
+}
+
+.user-input {
+   height: 2rem;
+   padding: 2rem;
+    
 }
 
 .temp {
