--- a/src/App.css
+++ b/src/App.css
@@ -1,99 +1,71 @@
-
-
 body {
-    margin: 0;
-    padding: 0;
-
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .App {
-   display: flex;
-   flex-direction: column;
-   margin: auto;
-   text-align: center;
-   background: url("https://img.freepik.com/free-vector/gradient-mountain-landscape_23-2149162009.jpg") no-repeat center center fixed;
-   background-size: cover;
-   height: 100vh;
-   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  background: linear-gradient(
+    55deg,
+    rgb(60, 164, 199),
+    rgba(15, 133, 129, 0.488)
+  );
+  height: 100vh;
+  width: 100vw;
 }
-
-.header {
-    display: flex;
-    min-height: auto;
-    min-width: auto;
-    border: none;
-    color: aliceblue;
-}
-
-.deg {
-    font-size: medium;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.weather-icon  {
-    width: 25%;
-    height: 70%;
-    margin: auto;
-}
-.conditions {
-    margin: auto;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-
-.feels {
-    color: yellow;
- 
-}
-
-
-
 
 .weather-details {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.514);
-    color: black;
-    padding: 2em;
-    border-radius: 2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    min-width: 50vw;
-    max-width: 100vw;
-    min-height: 70vh;
-    max-height: 40vh;
-   
+  display: flex;
+  margin: auto;
+  width: 50vw;
+  height: 70vh;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 2rem;
 }
 
-.weather-bar {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 2%;
-    background-color: rgba(43, 41, 39, 0.459);
-    border-radius: 1rem;
-    line-height: 4vh;
-
+.weather {
+  flex-basis: 50%;
+  margin-left: 2rem;
 }
 
-.icon {
-    height: 50%;
+
+
+.weather-info {
+  flex-basis: 50%;
+  border-radius: 1rem;
+  width: auto;
+  font-size: 0.8rem;
+  padding: 1rem;
+  justify-content: space-evenly;
+  background-color: rgb(132, 138, 138);
+  color: aliceblue;
 }
+
+
+
+.weather-stats {
+  font-weight: bold;
+}
+
+.current-conditions {
+  text-align: center;
+}
+
+
 
 .user-input {
-   height: 2rem;
-   padding: 2rem;
-    
+  display: flex;
+  text-align: center;
+  margin: auto;
+  justify-content: center;
+  width: 80vw;
+  padding: 2rem;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 4rem;
 }
-
-.temp {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.humid {
-    text-align: center;
-}
-
 
 
 
