--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -3,13 +3,16 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  margin: auto;
+ 
 }
 
 .search-inputs input {
-  background-color: aliceblue;
+  background-color: #ffffff;
+  border-radius: calc(0.2 * 2rem);
   font-size: 1.5rem;
-  padding: 1rem;
-  width: 80vw;
+  padding: 1.3rem;
+  width: 60vw;
   height: 5%;
   border: none;
   
@@ -21,13 +24,12 @@ input:focus {
 
 .search-btn {
  border: none;
- background-color: hsl(0, 0%, 0%);
- color: aliceblue;
- border-radius: 0.3rem;
- padding: 0.3rem;
+ background-color: #262626;
+ color: white;
+ padding: 0.5rem;
  cursor: pointer;
  width: 4rem;
- height: 2.4rem;
+ height: inherit;
 }
 
 .search-btn:hover {
